# gen-iter

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: gen_iter.rs  gen_iter_return.rs  lib.rs
