[package]
name = "gen-iter"
version = "0.4.1"
edition = "2021"
authors = ["tinaun <tinagma@gmail.com>"]
keywords = ["coroutine", "generator", "iterator"]
description = "temporary util for creating iterators using coroutines"

documentation = "https://docs.rs/gen-iter"
repository = "https://github.com/tinaun/gen-iter"
readme = "README.md"

license = "MIT/Apache-2.0"

[dependencies]
